# Back

./: .dockerignore  .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  kubeconfig.yaml  pyproject.toml  service.yaml
.github/: pull_request_template.md
.github/workflows/: checks.yml
kubernetes/: cluster_issuer.yaml  django_deployment.yaml  django_service.yaml  kubeconfig.yaml  nginx_config.yaml  nginx_deployment.yaml  nginx_ingress_tls.yaml  nginx_service.yaml  postgres_deployment.yaml  postgres_service.yaml  redis_deployment.yaml  redis_service.yaml
resources/nginx/: nginx.conf
scripts/: deploy.sh  entrypoint.sh  generate_dummy.sh  generate_request_for_admin.sh  genrate_dummy_for_admin.sh  get_access_token.sh  requirements.txt  test.sh  test_in_docker.sh  test_in_docker_chat.sh  test_in_docker_common.sh  test_in_docker_mihyun.sh  test_in_docker_notifications.sh
src/chat/: chat_consumer.py  models.py  urls.py
src/chat/tests/: test_views.py  (+2 more)
src/common/: apps.py  exceptions.py  logging_config.py  urls.py  views.py
src/config/: asgi.py  routing.py  storages.py  urls.py
src/estimations/: apps.py  models.py  seriailzers.py  signals.py  tests.py  urls.py  views.py
src/expert/: models.py  seriailzers.py  tests.py  urls.py  views.py
src/notifications/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/reservations/: models.py  seriailzers.py  tests.py  urls.py  views.py
src/reviews/: models.py  tests.py
src/users/: models.py  oauth_serializers.py  oauth_views.py  seriailzers.py  tests.py  urls.py  views.py
(+88 files in other folders)
